--- a/CI_CD_Demo/CI_CD_Demo/Base.lproj/Main.storyboard
+++ b/CI_CD_Demo/CI_CD_Demo/Base.lproj/Main.storyboard
@@ -27,8 +27,8 @@
                                     <action selector="btnCatchTapped:" destination="BYZ-38-t0r" eventType="touchUpOutside" id="lhA-mL-IrF"/>
                                 </connections>
                             </button>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OOPS!! YOU CAUGHT ME!!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1oN-2f-xl3">
-                                <rect key="frame" x="103" y="477.5" width="208" height="21"/>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OOPS!! YOU CAUGHT ME!! SMARTYY!!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1oN-2f-xl3">
+                                <rect key="frame" x="56.5" y="478" width="301" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
